fix about spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -1621,7 +1621,7 @@ a {
   }
 
   #about {
-    max-width: 84rem;
+    max-width: 82%;
     padding-top: 2rem;
   }
 
